# backend.ai-krunner-static-gnu

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  compat-test.Dockerfile  pyproject.toml  setup.cfg
.github/workflows/: default.yml
requirements/: build.txt
scripts/: build.py  test.sh
src/ai/backend/krunner/static_gnu/: __init__.py  krunner-env.static-gnu.dockerfile  krunner-env.static-gnu.x86_64.tar.xz  krunner-python.static-gnu.dockerfile  krunner-wheels.static-gnu.dockerfile  requirements.txt
src/ai/backend/krunner/ubuntu/: krunner-env.static-gnu.x86_64.tar.xz  krunner-env.ubuntu16.04.dockerfile  krunner-env.ubuntu16.04.x86_64.tar.xz  krunner-env.ubuntu18.04.dockerfile  krunner-env.ubuntu18.04.x86_64.tar.xz  krunner-env.ubuntu20.04.dockerfile  krunner-env.ubuntu20.04.x86_64.tar.xz  krunner-python.ubuntu16.04.dockerfile  krunner-python.ubuntu18.04.dockerfile  krunner-python.ubuntu20.04.dockerfile  plugin.py  requirements.txt  versions.txt
