[metadata]
name = backend.ai-krunner-ubuntu
version = attr: ai.backend.krunner.ubuntu.__version__
description = Backend.AI Kernel Runner for Ubuntu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = devops@lablup.com
license = MIT

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools>=41.0.1
install_requires =
    Click>=7.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.4
    twine>=1.13.0
test =
    pytest>=5.0.1
    flake8>=3.7.0
    codecov
dev =
    pytest-sugar
ci =

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
