[metadata]
name = backend.ai-krunner-static-gnu
version = attr: ai.backend.krunner.static_gnu.__version__
description = Backend.AI Kernel Runner based on GNU libc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://backend.ai
author = Lablup Inc.
author_email = devops@lablup.com
license = MIT

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools>=46.1.3
install_requires =
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.34.2
    twine~=3.0
test =
    pytest~=6.2.1
    flake8>=3.7.9
    codecov
dev =
ci =

[options.packages.find]
where = src
include = ai.backend.*

[options.entry_points]
backendai_krunner_v10 =
    static_gnu = ai.backend.krunner.static_gnu.plugin

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
